fix: try to fix overflowing via setting main height as 100dvh;

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -64,7 +64,7 @@ button {
 
 main {
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   overflow: auto;
 }
 
